--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "author": "Nakara Kittisirikul",
   "license": "MIT",
+  "repository": "https://github.com/mekku/deasync-wrap",
   "dependencies": {
     "deasync": "^0.1.28"
   }
